XO_Project_UAT/Project--XOGrp--UAT/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Campaign_Introduction__c</fullName>
        <formula>Campaign.Introductory_Verbiage_Formula__c</formula>
        <label>Campaign Introduction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelayCampaignMemNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>csp-3609</description>
        <label>DelayCampaignMemNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delay_time_03__c</fullName>
        <formula>(NOW()-0.036)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delay time 03</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notify_Sales_Team__c</fullName>
        <formula>Campaign.Notify_Sales_Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notify Sales Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Console_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_400, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_400)) + &apos;console#%2F&apos; + (IF(ContactId == null, Lead.Id, Contact.Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Console Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_400, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_400)) + (IF(ContactId == null, Lead.Id, Contact.Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Local_Sales_Market__c</fullName>
        <formula>IF(ContactId = null, Lead.Local_Sales_Market__r.Name, Contact.Account.Local_Sales_Market__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Local Sales Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Multiple_Categories__c</fullName>
        <formula>IF(ContactId == null, IF(Lead.Interest_in_Adv_in_Multiple_Categories__c,&apos;Yes&apos;, &apos;No&apos;), IF(Contact.Account.Interest_in_Adv_in_Multiple_Categories__c, &apos;Yes&apos;, &apos;No&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Multiple Categories</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Primary_Category__c</fullName>
        <formula>IF(ContactId == null, Lead.Primary_Category__r.Name, Contact.Account.Primary_Category__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Primary Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Website__c</fullName>
        <formula>IF(ContactId == null, Lead.Website, Contact.Account.Website)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Appellation__c</fullName>
        <formula>case (MID(Lead.OwnerId, 1, 3),
&quot;00G&quot;,&quot;Queue: &quot; &amp; Lead.Owner:Queue.QueueName,
&quot;005&quot;,Lead.Owner:User.FirstName&amp;&quot; &quot;&amp;Lead.Owner:User.LastName,
Contact.Account.Owner.FirstName &amp; &quot; &quot; &amp; Contact.Account.Owner.LastName)</formula>
        <label>Template Appellation</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>